--- a/public/styles.css
+++ b/public/styles.css
@@ -28,5 +28,5 @@
     width: 200px;
     border-style: solid;
     border-color: black;
-    background-color: aqua
+    background-color: violet
 }
